# Atlas

./: .gitignore  README.md  SearchQuestion.md  chat.py  config.py  embedding.py  main.py  pyproject.toml  qdrant.py  requirements.txt  testfile.json  testfilelarge.json
OpenAI-Chatbot/: .env.template  chat.py  config.py  embedding.py  header.py  main.py  qdrant.py  requirements.txt
